--- a/src/css/VisOverviewPanel.css
+++ b/src/css/VisOverviewPanel.css
@@ -88,18 +88,118 @@
         .overview-header {
             display: flex;
             flex-direction: row;
+            align-items: center;
             width: 100%;
             height: 100px;
             border-right: 1px solid lightgrey;
-            overflow: hidden;
             background-color: #f3f9ff;
             border-bottom: 1px solid #aabacd;
-
-            .menu-container {
-                width: auto;
-            }
+            padding: 20px;
 
             .cancer-selector {
+                display: flex;
+                flex-direction: column;
+                padding: 0px;
+
+                .dropdown-container {
+                    position: relative;
+                    display: flex;
+                    width: max-content;
+
+                    .dropdown-button {
+                        display: flex;
+                        align-items: center;
+                        font-size: 1.875rem;
+                        font-weight: 600;
+                        background-color: transparent;
+                        border: none;
+                        border-radius: 5px;
+                        padding: 0px 15px;
+
+                        .icon {
+                            transform: rotate(180deg);
+                            /* transition: transform 0.2s ease; */
+                            width: 20px;
+                            margin-left: 20px;
+                        }
+                    }
+
+                    .dropdown-button:hover {
+                        cursor: pointer;
+                        background-color: #dee5ec;
+                    }
+
+                    .dropdown-button.toggle-open {
+                        .icon {
+                            transition: transform 0.2s ease;
+                            transform: rotate(0deg);
+                        }
+                    }
+
+                    .dropdown-items {
+                        position: absolute;
+                        display: flex;
+                        flex-direction: column;
+                        background-color: white;
+                        border: 1px solid #889cb5;
+                        border-radius: 5px;
+                        padding: 10px;
+                        height: 500px;
+                        font-size: 1rem;
+                        overflow: auto scroll;
+                        z-index: 1;
+                        top: 100%;
+                        gap: 5px;
+                        width: max-content;
+                    }
+
+                    .dropdown-items button {
+                        display: flex;
+                        justify-content: space-between;
+                        padding: 5px 15px;
+                        border-radius: 5px;
+                        font-size: 1.25rem;
+                        background-color: transparent;
+                        border: none;
+                        gap: 30px;
+                    }
+
+                    .dropdown-items button:hover {
+                        cursor: pointer;
+                        background-color: #c6def6;
+                    }
+                }
+            }
+
+            .upload-button-container {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                .upload-file-button {
+                    display: flex;
+                    justify-content: center;
+                    color: white;
+                    background-color: #617c9d;
+                    border: 1px solid #889cb5;
+                    padding: 10px 15px;
+                    border-radius: 5px;
+                    height: min-content;
+                    width: max-content;
+
+                    svg.button {
+                        position: relative;
+                        height: 20px;
+                        width: auto;
+                        top: auto;
+                        right: auto;
+                    }
+
+                    span {
+                        font-weight: 600;
+                        margin-left: 10px;
+                    }
+                }
             }
         }
 
