--- a/src/css/SampleConfigForm.css
+++ b/src/css/SampleConfigForm.css
@@ -3,10 +3,10 @@
         width: 90%;
     }
     .modal-header {
-        background-color: #F3F8FE;
-        border-bottom: 1px solid #BBC5E1;
+        background-color: #f3f8fe;
+        border-bottom: 1px solid #bbc5e1;
         padding: 20px 25px;
-    
+
         .modal-title {
             display: flex;
             align-items: center;
@@ -16,7 +16,7 @@
             svg {
                 height: 25px;
                 width: 25px;
-                color: #ABC3E0;
+                color: #abc3e0;
                 margin-right: 20px;
             }
         }
@@ -39,12 +39,12 @@
             }
 
             a {
-                background-color: #F8F8F8;
-                border: 1px solid #DCDCDC;
+                background-color: #f8f8f8;
+                border: 1px solid #dcdcdc;
                 padding: 10px 15px;
                 border-radius: 6px;
                 font-weight: 500;
-                color: #4E4E4E;
+                color: #4e4e4e;
             }
 
             a:hover {
@@ -55,8 +55,8 @@
 
         .form-inputs-container {
             padding: 20px;
-            background-color: #FDFDFD;
-            border: 2px solid #A8A8A8;
+            background-color: #fdfdfd;
+            border: 2px solid #a8a8a8;
             border-radius: 8px;
 
             .input-button-container {
@@ -69,13 +69,13 @@
                 }
                 .example-dataset-button {
                     width: 200px;
-                    background-color: #F8F8F8;
-                    border: 1px solid #DCDCDC;
+                    background-color: #f8f8f8;
+                    border: 1px solid #dcdcdc;
                     padding: 5px 10px;
                     border-radius: 6px;
                     font-weight: 500;
                     margin-bottom: 12px;
-                    color: #4E4E4E;
+                    color: #4e4e4e;
 
                     svg {
                         height: 15px;
@@ -92,7 +92,7 @@
 
                 .menu-subtitle {
                     margin-bottom: 0px;
-                    color: #5E5E5E;
+                    color: #5e5e5e;
                     font-weight: 600;
                     font-size: 0.875rem;
                     margin-left: 4px;
@@ -101,14 +101,14 @@
                 .menu-dropdown {
                     margin-bottom: 0px;
                     border-radius: 4px;
-                    border: 1px solid #A8A8A8;
+                    border: 1px solid #a8a8a8;
                     padding: 5px 6px 5px 5px;
                 }
                 .menu-text-input {
                     margin-bottom: 0px;
                     border-radius: 4px;
                     padding: 5px 10px;
-                    border: 1px solid #A8A8A8;
+                    border: 1px solid #a8a8a8;
                 }
                 .menu-text-input-invalid {
                     margin-bottom: 0px;
@@ -130,21 +130,22 @@
             }
         }
     }
-    
+
     .modal-footer {
         .create-cohort {
-            border: 1px solid #DCDCDC;
-            color: #1060C9;
+            border: 1px solid #dcdcdc;
+            color: #1060c9;
             font-weight: 500;
             padding: 8px 15px;
         }
-        .create-cohort:hover, .create-cohort:focus-visible {
+        .create-cohort:hover,
+        .create-cohort:focus-visible {
             cursor: pointer;
             text-decoration: none;
-            background-color: #F8F8F8;
+            background-color: #f8f8f8;
         }
         .add-to-cohort {
-            background-color: #1060C9;
+            background-color: #1060c9;
             border: 1px solid #004093;
             font-weight: 600;
             padding: 8px 20px;
