--- a/src/css/ClinicalPanel.css
+++ b/src/css/ClinicalPanel.css
@@ -223,6 +223,10 @@
                     scrollbar-width: thin;
                     .data-row {
                         padding: 8px;
+
+                        .data-value {
+                            word-break: break-all;
+                        }
                     }
                     .data-row:nth-of-type(even) {
                         background-color: #f5f5f5;
