--- a/src/css/VisOverviewPanel.css
+++ b/src/css/VisOverviewPanel.css
@@ -137,6 +137,13 @@
                 flex-direction: column;
                 padding: 0px;
             }
+
+            .dropdown-container {
+                .dropdown-button {
+                    min-width: 350px;
+                    justify-content: space-between;
+                }
+            }
         }
 
         .overview-controls {
