--- a/src/css/ClinicalPanel.css
+++ b/src/css/ClinicalPanel.css
@@ -163,16 +163,16 @@
                         border-bottom: 1px solid #e0e6eb;
 
                         .data-label {
-                            flex: 3;
+                            flex: 2;
                             color: #565961;
                             font-weight: 600;
-                            word-break: break-all;
+                            word-break: break-word;
                         }
 
                         .data-value {
                             flex: 2;
                             color: #000000;
-                            word-break: break-all;
+                            word-break: break-word;
                         }
                     }
 
@@ -223,6 +223,10 @@
                     scrollbar-width: thin;
                     .data-row {
                         padding: 8px;
+
+                        .data-value {
+                            word-break: break-all;
+                        }
                     }
                     .data-row:nth-of-type(even) {
                         background-color: #f5f5f5;
